--- a/index.html
+++ b/index.html
@@ -2,101 +2,106 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Minecraft - LegacyBack Mod</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LegacyBack — Старый Майнкрафт здесь!</title>
     <style>
-        /* Стиль в духе Alpha/Beta */
+        /* Основной фон — здесь будет твоя текстура */
         body {
-            background-image: url('https://minecraft.net/static/theme/img/background/dirt.png'); /* Классическая грязь */
+            background: url('bg.png') #402b15; /* Если файла нет, будет коричневый цвет */
             background-repeat: repeat;
             background-size: 64px;
             image-rendering: pixelated;
-            color: #DDD;
-            font-family: 'Courier New', Courier, monospace; /* Пиксельный вайб */
+            font-family: 'Courier New', monospace;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
             margin: 0;
-            padding: 0;
+            color: white;
         }
 
-        .container {
-            background-color: rgba(0, 0, 0, 0.8);
-            width: 80%;
-            max-width: 800px;
-            margin: 50px auto;
-            border: 4px solid #333;
-            padding: 20px;
-            box-shadow: 10px 10px 0px #000;
+        .window {
+            background-color: rgba(0, 0, 0, 0.85);
+            border: 4px solid #111;
+            outline: 4px solid #555;
+            padding: 40px;
+            text-align: center;
+            max-width: 700px;
+            position: relative;
+        }
+
+        /* Тот самый прыгающий текст */
+        .splash {
+            position: absolute;
+            top: -20px;
+            right: -30px;
+            color: #ffff55;
+            font-size: 20px;
+            font-weight: bold;
+            text-shadow: 2px 2px #3f3f00;
+            transform: rotate(-15deg);
+            animation: splashAnim 0.5s infinite alternate;
+        }
+
+        @keyframes splashAnim {
+            from { transform: rotate(-15deg) scale(1); }
+            to { transform: rotate(-15deg) scale(1.1); }
         }
 
         h1 {
-            color: #FFF;
-            text-shadow: 3px 3px #3f3f3f;
-            font-size: 32px;
-            text-transform: uppercase;
+            font-size: 48px;
+            margin: 0;
+            text-shadow: 4px 4px #3f3f3f;
         }
 
-        .header-logo {
-            margin-bottom: 20px;
+        .description {
+            color: #aaa;
+            margin: 20px 0;
+            line-height: 1.6;
         }
 
-        .news-block {
-            border: 2px solid #555;
-            background: #222;
-            padding: 15px;
-            margin-bottom: 20px;
-            text-align: left;
+        .btn-group {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+            margin-top: 30px;
         }
 
         .mc-button {
-            display: inline-block;
-            background-color: #666;
+            background: #6e6e6e;
             border: 3px solid #000;
-            border-top-color: #AAA;
-            border-left-color: #AAA;
+            border-top-color: #aaa;
+            border-left-color: #aaa;
             color: white;
-            padding: 10px 20px;
+            padding: 15px;
             text-decoration: none;
+            font-size: 16px;
             font-weight: bold;
-            margin: 10px;
-            cursor: pointer;
         }
 
         .mc-button:hover {
-            background-color: #55a02a; /* Зеленый при наведении */
+            background: #55a02a;
             border-top-color: #88ff55;
             border-left-color: #88ff55;
         }
 
-        .footer {
-            margin-top: 30px;
-            font-size: 12px;
-            color: #888;
-        }
+        .full-width { grid-column: span 2; }
     </style>
 </head>
 <body>
 
-<div class="container">
-    <div class="header-logo">
-        <h1>LegacyBack Project</h1>
-        <p style="color: #ffff55;">Возвращаем Альфу в версию 1.20.1!</p>
-    </div>
+<div class="window">
+    <div class="splash">ALPHA VIBES!</div>
+    <h1>LegacyBack</h1>
+    <p class="description">
+        Забудь про кулдаун атаки и долгую еду. <br>
+        Мы переносим механики 2011 года в современный Minecraft 1.20.1.
+    </p>
 
-    <div class="news-block">
-        <h3>Последние обновления:</h3>
-        <ul>
-            <li>Добавлен мгновенный «кусь» (еда съедается сразу).</li>
-            <li>Отключен кулдаун атаки (Spam click active!).</li>
-            <li>Исправлен баг с миксинами.</li>
-        </ul>
-    </div>
-
-    <div class="download-zone">
-        <a href="https://modrinth.com" class="mc-button">СКАЧАТЬ С MODRINTH</a>
-        <a href="https://curseforge.com" class="mc-button">СКАЧАТЬ С CURSEFORGE</a>
-        <a href="https://github.com" class="mc-button">ИСХОДНЫЙ КОД (GITHUB)</a>
-    </div>
-
-    <div class="footer">
-        <p>Not an official Minecraft product. Not approved by or associated with Mojang.</p>
+    <div class="btn-group">
+        <a href="https://modrinth.com" class="mc-button">MODRINTH</a>
+        <a href="https://curseforge.com" class="mc-button">CURSEFORGE</a>
+        <a href="https://github.com" class="mc-button full-width">GITHUB SOURCE</a>
     </div>
 </div>
 
