--- a/index.html
+++ b/index.html
@@ -2,108 +2,105 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LegacyBack — Старый Майнкрафт здесь!</title>
+    <title>Minecraft - LegacyBack Menu</title>
     <style>
-        /* Основной фон — здесь будет твоя текстура */
+        /* Подключаем шрифт Minecraft */
+        @font-face {
+            font-family: 'Minecraft';
+            src: url('minecraft.ttf'); /* Положи файл шрифта в папку docs */
+        }
+
         body {
-            background: url('bg.png') #402b15; /* Если файла нет, будет коричневый цвет */
+            background-image: url('bg.png'); /* Твоя сгенерированная грязь */
             background-repeat: repeat;
             background-size: 64px;
             image-rendering: pixelated;
-            font-family: 'Courier New', monospace;
+            margin: 0;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
-            min-height: 100vh;
-            margin: 0;
-            color: white;
+            justify-content: center;
+            height: 100vh;
+            font-family: 'Minecraft', 'Courier New', monospace;
         }
 
-        .window {
-            background-color: rgba(0, 0, 0, 0.85);
-            border: 4px solid #111;
-            outline: 4px solid #555;
-            padding: 40px;
-            text-align: center;
-            max-width: 700px;
-            position: relative;
-        }
-
-        /* Тот самый прыгающий текст */
-        .splash {
-            position: absolute;
-            top: -20px;
-            right: -30px;
-            color: #ffff55;
-            font-size: 20px;
-            font-weight: bold;
-            text-shadow: 2px 2px #3f3f00;
-            transform: rotate(-15deg);
-            animation: splashAnim 0.5s infinite alternate;
-        }
-
-        @keyframes splashAnim {
-            from { transform: rotate(-15deg) scale(1); }
-            to { transform: rotate(-15deg) scale(1.1); }
-        }
-
-        h1 {
-            font-size: 48px;
-            margin: 0;
+        .title {
+            color: #FFF;
+            font-size: 42px;
             text-shadow: 4px 4px #3f3f3f;
+            margin-bottom: 50px;
+            text-align: center;
         }
 
-        .description {
-            color: #aaa;
-            margin: 20px 0;
-            line-height: 1.6;
-        }
-
-        .btn-group {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 10px;
-            margin-top: 30px;
+        .menu {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+            width: 400px;
         }
 
         .mc-button {
+            position: relative;
             background: #6e6e6e;
-            border: 3px solid #000;
-            border-top-color: #aaa;
-            border-left-color: #aaa;
-            color: white;
-            padding: 15px;
+            border: 2px solid #000;
+            /* Эффект объема как в старом меню */
+            box-shadow: inset 2px 2px #aaa, inset -2px -2px #333;
+            color: #E0E0E0;
+            padding: 12px;
             text-decoration: none;
-            font-size: 16px;
-            font-weight: bold;
+            font-size: 18px;
+            text-align: center;
+            cursor: pointer;
+            display: block;
         }
 
         .mc-button:hover {
             background: #55a02a;
-            border-top-color: #88ff55;
-            border-left-color: #88ff55;
+            box-shadow: inset 2px 2px #88ff55, inset -2px -2px #224411;
+            color: #FFF;
         }
 
-        .full-width { grid-column: span 2; }
+        .splash {
+            color: #ffff55;
+            font-size: 18px;
+            text-shadow: 2px 2px #3f3f00;
+            transform: rotate(-15deg);
+            position: absolute;
+            top: -25px;
+            right: -40px;
+            animation: bounce 0.5s infinite alternate;
+        }
+
+        @keyframes bounce {
+            from { transform: rotate(-15deg) scale(1); }
+            to { transform: rotate(-15deg) scale(1.1); }
+        }
+
+        .footer {
+            margin-top: 50px;
+            color: #AAA;
+            font-size: 14px;
+        }
     </style>
 </head>
 <body>
 
-<div class="window">
-    <div class="splash">ALPHA VIBES!</div>
-    <h1>LegacyBack</h1>
-    <p class="description">
-        Забудь про кулдаун атаки и долгую еду. <br>
-        Мы переносим механики 2011 года в современный Minecraft 1.20.1.
-    </p>
+    <div style="position: relative;">
+        <h1 class="title">LEGACYBACK MOD</h1>
+        <div class="splash">OLD IS GOLD!</div>
+    </div>
 
-    <div class="btn-group">
+    <div class="menu">
         <a href="https://modrinth.com" class="mc-button">MODRINTH</a>
         <a href="https://curseforge.com" class="mc-button">CURSEFORGE</a>
-        <a href="https://github.com" class="mc-button full-width">GITHUB SOURCE</a>
+        <a href="https://github.com" class="mc-button">GITHUB SOURCE</a>
+        <a href="#" class="mc-button">CHANGELOG</a>
+        <a href="#" class="mc-button" style="margin-top: 10px; background: #444;">REPORT A BUG</a>
     </div>
-</div>
+
+    <div class="footer">
+        Copyright Mojang AB. Do not distribute!
+    </div>
 
 </body>
 </html>
